Wed Apr  3 16:34:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_eq): test as Fixnum if possible and get rid of zero
	  length Bignum.  [ruby-core:53893] [Bug #8204]

Tue Apr  2 23:56:03 2013  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.random_bytes): Use
	  OpenSSL::Random.random_add instead of OpenSSL::Random.seed and
	  specify 0.0 as the entropy.
	  [ruby-core:47308] [Bug #6928]

Tue Apr  2 20:24:52 2013  Tanaka Akira  <akr@fsij.org>

	* pack.c: Support Q! and q! for long long.
	  (natstr): Moved to toplevel.  Add q and Q if there is long long type.
	  (endstr): Moved to toplevel.
	  (NATINT_PACK): Consider long long.
	  (NATINT_LEN_Q): New macro.
	  (pack_pack): Support Q! and q!.
	  (pack_unpack): Ditto.
	  [ruby-dev:43970] [Feature #3946]

Tue Apr  2 19:24:26 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/num2int/num2int.c: Define utility methods
	  as module methods of Num2int.

	* test/-ext-/num2int/test_num2int.rb: Follow the above change.

Tue Apr  2 18:49:01 2013  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: Don't use Array#to_s.
	   [ruby-core:52058] [Bug #7811] fixed by zzak (Zachary Scott).

Tue Apr  2 17:38:20 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_to_s): suppress duplicated charclass warning.
	  Regexp#to_s suppress extra its whole regexp options by calling
	  onig_new with its source, but it doesn't call rb_reg_preprocess.
	  Therefore its Unicode escapes (\u{XXXX}) are given as is,
	  and it may cause duplicated charclass warning for example
	  "[\u{33}]" (3 is duplicated) or "[\u{a}\u{b}]" (u is duplicated).
	  [ruby-core:53649] [Bug #8151]

Tue Apr  2 16:00:06 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): separate to ease showing C backtrace.

	* internal.h (rb_print_backtrace): ditto.

Tue Apr  2 15:22:09 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/envutil.rb (assert_separately): stop_auto_run of