@@ -1,4 +1,9 @@
-Wed Apr  3 16:34:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Apr  3 16:35:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* bignum.c (rb_big_eq): hide intermediate Bignums not just freeing
+	  memory.  [ruby-core:53893] [Bug #8204]
+
+	* object.c (rb_obj_hide): hide an object by clearing klass.
 
 	* bignum.c (rb_big_eq): test as Fixnum if possible and get rid of zero
 	  length Bignum.  [ruby-core:53893] [Bug #8204]
